add remove handler in NDTree